# ThinkingInTypes.github.io

./: .gitignore  .prettierrc  404.html  CNAME  README.md  astro.config.mjs  extract.ps1  index.html  inject.bat  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  tasks.py
01 Preface/: index.html
01_Preface/: index.html
02 Foundations/: index.html
02 Introduction/: index.html
02_Foundations/: index.html
03 Basic Annotations/: index.html
03 Basic_Annotations/: index.html
03 What_is_a_Type/: index.html
03_What_is_a_Type/: index.html
04 Basic_Annotations/: index.html
04 Collections/: index.html
04 Collections And Generics/: index.html
04_Basic_Annotations/: index.html
04_Predefined_Annotations/: index.html
04_Predefined_Types/: index.html
04_Using_Types/: index.html
05 Collections/: index.html
05 Dataclasses And Typed Classes/: index.html
05 Generics/: index.html
05_Collections/: index.html
05_Custom_Types/: index.html
06 Callable Types And Annotations/: index.html
06 Dataclasses/: index.html
06 Generics/: index.html
06_Generics/: index.html
06_Immutability/: index.html
06_Pattern_Matching/: index.html
07 Class_Attributes/: index.html
07 Dataclasses/: index.html
07 Specialized Type Tools/: index.html
07 Specialized_Type_Tools/: index.html
07 Type Checking Tools And Techniques/: index.html
07_Dataclasses/: index.html
07_Generics/: index.html
07_Immutability/: index.html
07_Pattern_Matching/: index.html
08 Callable Types/: index.html
08 Callable_Types/: index.html
(+381 files in other folders)
