[project]
name = "thinkingintypes-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pybooktools",
]

[dependency-groups]
dev = [
    "mdformat>=0.7.22",
]

[tool.uv.sources]
pybooktools = { path = "../pybooktools", editable = true }

